import { renderHook } from '@testing-library/react-hooks'
import { PropsWithChildren } from 'react'
import {
  cosmosAssetId,
  mockCosmosAccount,
  mockCosmosAccountWithStakingData,
} from 'test/mocks/accounts'
import { cosmos, mockAssetState } from 'test/mocks/assets'
import { mockMarketData } from 'test/mocks/marketData'
import { mockUpsertPortfolio } from 'test/mocks/portfolio'
import { MOCK_VALIDATORS } from 'test/mocks/validators'
import { TestProviders } from 'test/TestProviders'
import { ReduxState } from 'state/reducer'
import { accountSpecifiers } from 'state/slices/accountSpecifiersSlice/accountSpecifiersSlice'
import { assets as assetsSlice } from 'state/slices/assetsSlice/assetsSlice'
import { marketData as marketDataSlice } from 'state/slices/marketDataSlice/marketDataSlice'
import { portfolio as portfolioSlice } from 'state/slices/portfolioSlice/portfolioSlice'
import { validatorData } from 'state/slices/validatorDataSlice/validatorDataSlice'
import { store } from 'state/store'

import { useCosmosStakingBalances } from './useCosmosStakingBalances'

jest.mock('state/slices/selectors', () => ({
  ...jest.requireActual('state/slices/selectors'),
  selectFirstAccountSpecifierByChainId: (_state: ReduxState) => [
    'cosmos:cosmoshub-4:cosmos1wc4rv7dv8lafv38s50pfp5qsgv7eknetyml669',
  ],
}))

function setup() {
  const assetData = mockAssetState({
    byId: {
      [cosmos.assetId]: cosmos,
    },
    ids: [cosmos.assetId],
  })
  store.dispatch(assetsSlice.actions.setAssets(assetData))

  const cosmosMarketData = mockMarketData({ price: '77.55' })
  store.dispatch(
    marketDataSlice.actions.setCryptoMarketData({
      [cosmos.assetId]: cosmosMarketData,
    }),
  )

  store.dispatch(
    accountSpecifiers.actions.setAccountSpecifiers([
      { 'cosmos:cosmoshub-4': 'cosmos1wc4rv7dv8lafv38s50pfp5qsgv7eknetyml669' },
    ]),
  )

  const wrapper: React.FC<PropsWithChildren> = ({ children }) => (
    <TestProviders>{children}</TestProviders>
  )
  const { result } = renderHook(
    () =>
      useCosmosStakingBalances({
        assetId: 'cosmos:cosmoshub-4/slip44:118',
      }),
    { wrapper },
  )
  return { result }
}

// TODO: Will unskip
describe('useCosmosStakingBalances', () => {
  it('returns empty array for active opportunities and the shapeshift validator as a staking opportunity when staking data is empty and validators data are loaded', async () => {
    store.dispatch(
      validatorData.actions.upsertValidatorData({
        validators: MOCK_VALIDATORS,
      }),
    )
    store.dispatch(
      validatorData.actions.upsertValidatorData({
        validators: MOCK_VALIDATORS,
      }),
    )

    const { result } = setup()
    expect(result.current.cosmosStakingOpportunities).toMatchSnapshot()
    expect(result.current.totalBalance).toEqual('0')
  })

  it('returns active and non active staking opportunities when staking and validators data are loaded', async () => {
    store.dispatch(
      validatorData.actions.upsertValidatorData({
        validators: MOCK_VALIDATORS,
      }),
    )

    const cosmosAccount = mockCosmosAccount(mockCosmosAccountWithStakingData)

    store.dispatch(
      portfolioSlice.actions.upsertPortfolio(mockUpsertPortfolio([cosmosAccount], [cosmosAssetId])),
    )

    const { result } = setup()
    expect(result.current.cosmosStakingOpportunities).toMatchSnapshot()
    expect(result.current.totalBalance).toEqual('1.17')
  })
})
